# nickel-diesel

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
examples/: simple.rs  simple_sqlite_memory.rs
src/: lib.rs  middleware.rs
tests/: main.rs
