[package]
name = "nickel-diesel"
version = "0.3.0"
license = "MIT"
authors = ["Andrew Straw <strawman@astraw.com>",
  "Robert Yokota <ryokota@yammer-inc.com>"]
description = "Nickel middleware providing a diesel ORM with r2d2 connection pooling"
repository = "https://github.com/strawlab/nickel-diesel"
readme = "README.md"

[dependencies]
nickel = "0.8.0"
postgres = "0.11.7"
r2d2 = "0.7.0"
r2d2-diesel = "0.8"
plugin = "0.2.6"
typemap = "0.3.3"

[dev-dependencies]
dotenv = "0.8.0"

[dependencies.diesel]
version = "0.8"
default-features = false
features = ["postgres", "sqlite"]
