[package]
name = "nickel-diesel"
version = "0.4.0"
license = "MIT"
authors = ["Andrew Straw <strawman@astraw.com>",
  "Robert Yokota <ryokota@yammer-inc.com>"]
description = "Nickel middleware providing a diesel ORM with r2d2 connection pooling"
repository = "https://github.com/strawlab/nickel-diesel"
readme = "README.md"

[dependencies]
nickel = "0.9.0"
postgres = "^0.13"
r2d2 = "^0.7"
r2d2-diesel = "^0.9"
plugin = "0.2.6"
typemap = "0.3.3"

[dev-dependencies]
dotenv = "^0.8"

[dependencies.diesel]
version = "^0.9"
default-features = false
features = ["postgres", "sqlite"]
